--- a/Rust/rust-in-action/Ch10.md
+++ b/Rust/rust-in-action/Ch10.md
@@ -22,4 +22,10 @@
    }
    ```
 
-3. 
+3. `pub fn join(self) -> Result<T>`函数是会夺取掉Handle的所有权的。
+
+4. `std::time::Duration`这个结构体居然是Copy。而且这个家伙是`send`和`sync`的，因此是`thread-safe`的。
+   A type is Send if it is safe to send it to another thread.
+   A type is Sync if it is safe to share between threads (T is Sync if and only if &T is Send).
+
+
