--- a/Rust/rust-in-action/Ch10.md
+++ b/Rust/rust-in-action/Ch10.md
@@ -28,4 +28,6 @@
    A type is Send if it is safe to send it to another thread.
    A type is Sync if it is safe to share between threads (T is Sync if and only if &T is Send).
 
+5. 一个ascii的char如果在前面加上`b`会直接转换为byte，即`u8`；而当ascii字符串字面量前被加`b`，会变成u8的
+  数组。请注意，只有ascii的才可以通过这种方法转变为byte constant，中文等一些占用超过一个字节的都不可以。
 
