--- a/Rust/rust-in-action/Ch10.md
+++ b/Rust/rust-in-action/Ch10.md
@@ -30,4 +30,4 @@
 
 5. 一个ascii的char如果在前面加上`b`会直接转换为byte，即`u8`；而当ascii字符串字面量前被加`b`，会变成u8的
   数组。请注意，只有ascii的才可以通过这种方法转变为byte constant，中文等一些占用超过一个字节的都不可以。
-
+  > 这个在以前笔记里面写过的
