--- a/Rust/rust-in-action/Ch10.md
+++ b/Rust/rust-in-action/Ch10.md
@@ -31,3 +31,21 @@
 5. 一个ascii的char如果在前面加上`b`会直接转换为byte，即`u8`；而当ascii字符串字面量前被加`b`，会变成u8的
   数组。请注意，只有ascii的才可以通过这种方法转变为byte constant，中文等一些占用超过一个字节的都不可以。
   > 这个在以前笔记里面写过的
+  > 像是一种类型转换，char as u8
+
+6. 函数编程的风格，比如你想将一个字符串转换为u8的vector:
+   ```rust
+   fn main() {
+       // functional programming
+       let str: String = String::from("abc");
+       let v: Vec<u8> = str.bytes().map(|byte| {
+           byte+1
+	   }).collect();
+
+	   // normal approach
+	   let mut vv: Vec<u8> = Vec::new();
+	   for byte in str.bytes() {
+	        vv.push(byte+1);
+   	   }
+   }
+   ```
