--- a/vim/practical-vim/1.md
+++ b/vim/practical-vim/1.md
@@ -26,6 +26,7 @@
    用法是: `f<char>`，vim会在当前的光标直接此行结尾寻找这个char，如果找到的话，则将光标移动到这个char上，如果未找到，则光标不动。
    如果此行有多个char的话，使用`;`将光标移动到下一个匹配结果上，就像在搜索时使用`n`向搜索的方向继续匹配一样。
    > 妈的，我刚才试了试，使用`n`效果也是一样的，`N`还可以往回走，用这个快捷键好了。省得记两个。
+   > emm不一样的，`n`和`N`专门用来搜索patttern的，还是得用`;`
 
 6. vim的哲学，针对一个任务，想出可以重复的解决办法(解决步骤)，而vim擅长执行重复的工作，这样的效率就高了。
 
