--- a/Rust/rust-in-action/Ch10.md
+++ b/Rust/rust-in-action/Ch10.md
@@ -49,3 +49,18 @@
    	   }
    }
    ```
+
+7. rust中的`0..10`的类型是`std::ops::Range`，而`0..=10`的类型是`std::ops::RangeInclusive`
+   这两个类型都是带范型的，可以给不同的整形使用。
+
+8. 在rust中，迭代器是惰性的，你创建了一个迭代器，却不消耗掉它，那么他就不会起作用
+   比如你想将vec中的数字都x2
+   ```rust
+   fn double(v: &mut v){
+       v.iter_mut().map(|x| (*x)*=2);
+   }
+   ```
+   由map函数创建的迭代器并没有被消耗，所以这个函数并不会生效。在rust the book中说到，如果你想在一个collection上
+   执行一个闭包的话，建议改为for循环。
+
+
