--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -5,6 +5,25 @@
    的返回值直接就是`JoinHandle`，所以说如果你要创建的线程可能会失败，那么使用builder
    来创建比较好。
 
-2.  
-	
+2. rust中的线程在其中用`std::thread::Thread`这个结构体来表示，想要拿到获得这个结
+   构体有2种办法:
+   1. use std::thread::current; 使用这个函数返回调用此函数的thread的本体
+   	  ```rust
+      pub fn current() -> Thread
+      ```
+   2. 在`std::thread::JoinHandle`的基础上调用`thread`函数，这个函数是`impl JoinHandle`
+      里的，注意其返回的是不可变引用。
+      > The thread::current function is available even for threads not spawned by the APIs of this module.
+      ```rust
+      pub fn thread(&self) -> &Thread
+      ```
+3. 这个`thread`结构体有3个自己的方法
+   1. `pub fn id(&self) -> ThreadId`: 返回这个线程的id，id的数据结构是一个专用的结
+      构体，但其内部仅仅是一个`pub struct ThreadId(NonZeroU64);`，可能做了更多的抽
+	  象吧。
+   2. `pub fn name(&self) -> Option<&str>`，返回线程的名字。
+   3. `pub fn unpark(&self)`这个我还看不懂。
 
+4. Duration的2种最常见的创建的方法:
+   1. `pub const fn new(secs: u64, nanos: u32) -> Duration`
+   2. `pub const fn from_secs(secs: u64) -> Duration`
