--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -27,3 +27,17 @@
 4. Duration的2种最常见的创建的方法:
    1. `pub const fn new(secs: u64, nanos: u32) -> Duration`
    2. `pub const fn from_secs(secs: u64) -> Duration`
+
+5. `std::thread`这个module的函数
+    * thread::spawn()用来创建一个线程
+	* thread::current()返回当前线程
+	* thread::park() 将当前线程block掉  这个park会block掉，想要unnlock就使用`std::thread::Thread::unpark()`
+	* thread::sleep(Duration)让当前线程睡眠至少Duration的时间
+	* thread::yield_now()让当前线程放弃一个时间片
+
+6. 我惊了，thread居然有自己专用的Result
+   ```rust
+   use std::thread::Result;
+   type Result<T> = Result<T, Box<dyn Any + Send + 'static>>;
+   ```
+
