--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -40,4 +40,9 @@
    use std::thread::Result;
    type Result<T> = Result<T, Box<dyn Any + Send + 'static>>;
    ```
+7. auto trait指的是，这种trait不能被程序员去手动impl，只能被编译器实现，当编译器
+   觉得这个类型可以满足这个auto trait时，他就会给此类型实现这个trait。
+   `std::marker::sync`和`std::marker::send`就是两个这样的trait.
+   > 有点像go中的interface，隐式实现的？
 
+8. 
