--- a/utility/vim/practical-vim/1.md
+++ b/utility/vim/practical-vim/1.md
@@ -14,13 +14,13 @@
 
 4. vim中有很多命令都是复合命令:
    > 这个命令的共同之处: 都进入了insert mode
-   A: $a    在行尾追加，先回到行的最后一个char上，然后在其后追加
-   I: ^i    在行首写，先到行的第一个char上，然后在前面写
-   C: c$    change到行尾，也就是删除当前字符到行尾，然后进入insert mode.
-   S: ^C    替换本行的所有内容，先到行首，然后change到行尾
-   o: A<CR> 在光标下添加一行，也就是在行尾追加一个回车
-   O: ko    在光标上添加一行，先移动光标到上一行，然后在上一行的下面添加一行
-   s: cl    删除当前光标下的符号，然后进入insert mode 可以看作是 x然后i进入insert mode
+   * A: $a    在行尾追加，先回到行的最后一个char上，然后在其后追加
+   * I: ^i    在行首写，先到行的第一个char上，然后在前面写
+   * C: c$    change到行尾，也就是删除当前字符到行尾，然后进入insert mode.
+   * S: ^C    替换本行的所有内容，先到行首，然后change到行尾
+   * o: A<CR> 在光标下添加一行，也就是在行尾追加一个回车
+   * O: ko    在光标上添加一行，先移动光标到上一行，然后在上一行的下面添加一行
+   * s: cl    删除当前光标下的符号，然后进入insert mode 可以看作是 x然后i进入insert mode
 
 5. `f`: 
    用法是: `f<char>`，vim会在当前的光标直接此行结尾寻找这个char，如果找到的话，则将光标移动到这个char上，如果未找到，则光标不动。
