--- a/utility/vim/practical-vim/1.md
+++ b/utility/vim/practical-vim/1.md
@@ -1,6 +1,8 @@
-1. `.`命令用来重复上次的更改。什么叫做更改，比较好理解的是，在normal mode，使用一些命令对文件进行更改，比如`x`用来删除一个字符。还有一种更改是，
-   进入insert mode(不管你是怎样进入insert mode的，使用的哪个键，这个键都会被包含在这个更改中)到使用<ESC>回到normal mode期间，对文件进行的更改，dot 
-   command也可以用来重复这个。
+1. `.`命令用来重复上次的更改。什么叫做更改，比较好理解的是，在normal mode，使用
+   一些命令对文件进行更改，比如`x`用来删除一个字符。还有一种更改是，进入insert 
+   mode(不管你是怎样进入insert mode的，使用的哪个键，这个键都会被包含在这个更改
+   中)到使用<ESC>回到normal mode期间，对文件进行的更改，dot command也可以用来重
+   复这个。
 
 2. `>G`命令，用来将此行到文件最后的所有行，增加一个缩进。
    `>j`，将此行及下一行增加一个缩进。
@@ -23,10 +25,14 @@
    * s: cl    删除当前光标下的符号，然后进入insert mode 可以看作是 x然后i进入insert mode
 
 5. `f`: 
-   用法是: `f<char>`，vim会在当前的光标直接此行结尾寻找这个char，如果找到的话，则将光标移动到这个char上，如果未找到，则光标不动。
-   如果此行有多个char的话，使用`;`将光标移动到下一个匹配结果上，就像在搜索时使用`n`向搜索的方向继续匹配一样。
-   > 妈的，我刚才试了试，使用`n`效果也是一样的，`N`还可以往回走，用这个快捷键好了。省得记两个。
-   > emm不一样的，`n`和`N`专门用来搜索patttern的，还是得用`;`
+   > 应该是find的意思
+   用法是: `f<char>`，vim会在当前的光标直至此行结尾寻找这个char，如果找到的话，
+   则将光标移动到这个char上，如果未找到，则光标不动。如果此行有多个char的话，
+   使用`;`将光标移动到下一个匹配结果上，就像在搜索时使用`n`向搜索的方向继续匹
+   配一样。使用`,`回到上一个匹配的结果上。
+   > `n`和`N`专门用来搜索patttern的，两种快捷键别记混了
+   `F`: 这个的用法和`f`刚好相反，是往前寻找，在不知道这个功能键之前，我都是先`0`
+   来到行首，然后再嗯`f`.
 
 6. vim的哲学，针对一个任务，想出可以重复的解决办法(解决步骤)，而vim擅长执行重复的工作，这样的效率就高了。
 
