finish practical vim ch1

--- a/utility/vim/practical-vim/1.md
+++ b/utility/vim/practical-vim/1.md
@@ -18,6 +18,7 @@
    > 这个命令的共同之处: 都进入了insert mode
    * A: $a    在行尾追加，先回到行的最后一个char上，然后在其后追加
    * I: ^i    在行首写，先到行的第一个char上，然后在前面写
+   * D: d$    delete到行尾
    * C: c$    change到行尾，也就是删除当前字符到行尾，然后进入insert mode.
    * S: ^C    替换本行的所有内容，先到行首，然后change到行尾
    * o: A<CR> 在光标下添加一行，也就是在行尾追加一个回车
@@ -40,5 +41,13 @@
 
 6. vim的哲学，针对一个任务，想出可以重复的解决办法(解决步骤)，而vim擅长执行重复的工作，这样的效率就高了。
 
+7. vim中的替换
+   * `:s/pattern/replacement`仅会在光标那一行进行替换一处，如果行中有多个`pattern`
+   ，使用`&`进行继续替换
+   * 如果想将行中内容全部替换，使用`:s/pattern/replacement/g`
+   * 如果想将全文进行替换，使用`:%s/pattern/replacemet/g`
 
+8. 使用`*`进行搜索，一般情况下，当我们想要搜索一个词的时候，我们会`/pattern`。但我
+   们还可以将光标移到这个词中的任何一个字母上，使用`*`，就完成搜索了，此时光标就被移动
+   到了下一个匹配上，使用`n/N`可以自由的跳转
 
