--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -45,4 +45,21 @@
    `std::marker::sync`和`std::marker::send`就是两个这样的trait.
    > 有点像go中的interface，隐式实现的？
 
-8. 
+8. `std::marker::Send`这个trait，代表这样的类型，这些类型可以在不同的线程间
+   传递而不会线程不安全。也就是说，这样的类型，是可以被不同的线程在不同的时
+   间上被使用的
+
+9. `std::marker::Sync`: 如果一个类型是Sync的，那么不同线程通过shared reference
+   访问它就是安全的
+
+   > 注意shared reference & 是只能读不能写的。
+
+
+10. rust中的共享与可变
+    |\     |共享    |可变        |
+	|单线程|rc      |cell/refcell|
+	|多线程|Arc     |Mutex/RwLock|
+
+
+
+
