--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -62,8 +62,8 @@
 	|多线程|Arc     |Mutex/RwLock|
 
 11. `std::result::Result`从Result转变为Option的方法
-	Result<T, E> -> Option<T>   使用`std::result::Result::ok(self)`   
-	Result<T, E> -> Option<E>   使用`std::result::Result::err(self)`
+	* Result<T, E> -> Option<T>   使用`std::result::Result::ok(self)`   
+	* Result<T, E> -> Option<E>   使用`std::result::Result::err(self)`
 
 	> 这两个方法都是消耗掉Result。
 
