--- a/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
+++ b/programming-language/Rust/深入浅出rust/第四部分-线程安全.md
@@ -67,4 +67,9 @@
 	  > 这两个方法都是消耗掉Result。
 
 
-12. 
+12. 一个新的`Result`的类型 `use std::sync::LockResult`
+	```rust
+    type LockResult<Guard> = Result<Guard, PoisonError<Guard>>;
+	```
+
+	
