--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -18,4 +18,19 @@
    mode，在insert mode中做一些修改，再退出insert mode回到normal mode，所做出的
    修改就是一次change，那么此时你撤销的精度就由你在inseer mode所做的修改决定。
 
+3. 在insert mode，准备新打开一行，可以根据你想设置的change的精度来选择不同的策略：
+   * 在insert mode使用`<CR>`
+   * 使用`ESC`先退出insert mode，然后使用`o`来开启新的一行。
+     > 这样就将change的精度分得更细了。
+
+4. `db`命令: delete直到光标所在的单词的开始，不包含光标下面的这个字符。
+
+5. `this is a line`如果有这样一个句子，你的光标在`line`的最后一个字符`e`中，如果
+   删除line这个单词
+
+   1. `db` + `x`：由于db不能删除光标下的符号，所以需要额外的`x`
+   2. `b` + `dw`：先移动光标到这个单词的第一个char上，然后再`dw`删除一个单词.
+   3. `daw`：`aw`的意思是`a word`可以删除一个word
+      > 不清楚和`d1w`为啥不一样。
+
 
