--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -29,8 +29,22 @@
    删除line这个单词
 
    1. `db` + `x`：由于db不能删除光标下的符号，所以需要额外的`x`
-   2. `b` + `dw`：先移动光标到这个单词的第一个char上，然后再`dw`删除一个单词.
+   2. `b` + `dw`：先移动光标到这个单词的第一个char上，然后再`dw`删除一个单词
+      包含后面的空白(删除直至下一个单词的开始)
    3. `daw`：`aw`的意思是`a word`可以删除一个word
-      > 不清楚和`d1w`为啥不一样。
+      > 不清楚和`d1w`为啥不一样。测试了一下，无论光标在单词的哪个位置上，都会删
+	    除掉整个单词，外加后面的空白。
+
+
+6. 对一个数进行加法和减法。
+
+   > Add [count] to the number or alphabetic character at or after the cursor.
+
+   `122`比如将光标放在这个数字的任何一个字符上或者在数字的前面字符，使用:<br>
+   * `<C-a>`来进行加1
+   * `<C-x>`来进行减1
+   > 和大多数normal mode的命令一样，可以在命令前前缀一个数，来实现多次执行。想要
+     加x就给`<C-a>`前缀上x
+
 
 
