--- a/programming-language/Rust/rust-in-action/Ch10.md
+++ b/programming-language/Rust/rust-in-action/Ch10.md
@@ -63,4 +63,42 @@
    由map函数创建的迭代器并没有被消耗，所以这个函数并不会生效。在rust the book中说到，如果你想在一个collection上
    执行一个闭包的话，建议改为for循环。
 
+9. str的方法: 
+   * `as_bytes()`: 返回`&[u8]`
+   * `bytes()`: 返回`std::str::Bytes`，是一个`u8`的迭代器
+
+10. std中的channel是mpsc，multiple producer single receiver
+    第三方的crate中的`crossbeam`提供了mpmc receiver也可以是多个的了。
+
+11. 
+   
+   ```rust
+   use crossbeam::channel::unbounded;                                                                                                                                                              
+   use crossbeam::channel::{Sender, Receiver};
+   use std::thread;
+
+   fn main(){
+       let (tx, rx): (Sender<i32>, Receiver<i32>) = unbounded();
+
+	   for i in 0..5 {
+	           tx.send(i).unwrap();
+	   }
+
+	   // 这里的for循环创建线程也是有序的
+	   for _i in 0..5 {
+	       let rx_clone = rx.clone();
+	       thread::spawn(move || {
+	           match rx_clone.recv() {
+		       	   Ok(msg) => println!("{}", msg),
+		           Err(msg) => eprintln!("{}", msg),
+		       }
+			           
+			}).join().unwrap();
+	   }
+   }
+   ```
+   上面这段代码打印0 1 2 3 4，按序打印的。也就是说这个channel里面的东西是有序的,
+   是一个队列，再加上for循环创建线程是有序的，每个线程又join掉，所以最后的打印是
+   有序的。
+
 
