--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -39,6 +39,7 @@
 6. 对一个数进行加法和减法。
 
    > Add [count] to the number or alphabetic character at or after the cursor.
+     这个`after the cursor`蛮有意思，可以去寻找光标到行尾的数字然后对其加减。
 
    `122`比如将光标放在这个数字的任何一个字符上或者在数字的前面字符，使用:<br>
    * `<C-a>`来进行加1
@@ -46,5 +47,47 @@
    > 和大多数normal mode的命令一样，可以在命令前前缀一个数，来实现多次执行。想要
      加x就给`<C-a>`前缀上x
 
+7. dot command也是可以和count配合使用的，控制执行的次数。
+
+8. vim对数字字面量的解析是支持进制的，`07`会解释为8进制的7，所以其上应用`C-a`会得到
+   `010`如果你不想要这个特性，想使vim不支持8/16进制，使其对待所有的数字均为10进制可
+   以在`.vimrc`中加上一下代码: 
+   ```.vim
+   set nrformats=
+   ```
+
+   > 虽然这个并没有set实际的值，但它确实有用。
 
 
+9. tip11: don't count if you can repeat
+   好处有两点: <br>
+
+   1. 使用dot command，那么每一个change精度就更小，更利于精细的操作。
+   2. count是容易出错的，你可能数错了count的次数，然后造成了错误的结果。
+
+   > count是比较自动化的，当然dot command也可以进行count操作
+
+10. 昨天遇到了`daw`是删除一个单词，还有`dap`删除一个段落。
+    
+11. operator:
+  	|c|	c	change
+	|d|	d	delete
+	|y|	y	yank into register (does not change the text)
+	|~|	~	swap case (only if 'tildeop' is set) // 这个蛮不错的，快速转换大小写
+	|g~|	g~	swap case
+	|gu|	gu	make lowercase
+	|gU|	gU	make uppercase
+	|!|	!	filter through an external program
+	|=|	=	filter through 'equalprg' or C-indenting if empty
+	|gq|	gq	text formatting
+	|gw|	gw	text formatting with no cursor movement
+	|g?|	g?	ROT13 encoding
+	|>|	>	shift right
+	|<|	<	shift left
+	|zf|	zf	define a fold
+	|g@|	g@	call function set with the 'operatorfunc' option
+ 
+    > 在vim中，operator+motion已经形成一种语法。an action is composed from an operator
+	  followed by a motion.
+
+12.
