--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -77,17 +77,32 @@
 	|g~|	g~	swap case
 	|gu|	gu	make lowercase
 	|gU|	gU	make uppercase
-	|!|	!	filter through an external program
-	|=|	=	filter through 'equalprg' or C-indenting if empty
-	|gq|	gq	text formatting
-	|gw|	gw	text formatting with no cursor movement
-	|g?|	g?	ROT13 encoding
+	|!|	!	filter through an external program                        <>
+	|=|	=	filter through 'equalprg' or C-indenting if empty         <>
+	|gq|	gq	text formatting                                       <>
+	|gw|	gw	text formatting with no cursor movement               <>
+	|g?|	g?	ROT13 encoding                                        <>
 	|>|	>	shift right
 	|<|	<	shift left
-	|zf|	zf	define a fold
-	|g@|	g@	call function set with the 'operatorfunc' option
+	|zf|	zf	define a fold                                         <>
+	|g@|	g@	call function set with the 'operatorfunc' option      <>
+
+	> 打了`<>`标记的，目前都没有用过。
+
+	> 要记住这些operator后面要接motion的
  
     > 在vim中，operator+motion已经形成一种语法。an action is composed from an operator
 	  followed by a motion.
 
-12.
+12. vim的语法:
+    1. action = operator + motion
+	2. operator + operator: 将这个操作应用与此行
+	   > 比如dd，删除当前行，yy复制当前行
+
+	> cc, change当前行，那么这个和`S`应该是一样的功能。
+	  `h S`: <br>
+	  ["x]S: Delete [count] lines [into register x] and startinsert.  Synonym 
+	  for "cc" |linewise|.
+
+
+
