--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -97,12 +97,22 @@
 12. vim的语法:
     1. action = operator + motion
 	2. operator + operator: 将这个操作应用与此行
-	   > 比如dd，删除当前行，yy复制当前行
+	   > 比如`dd`删除当前行; yy复制当前行
 
 	> cc, change当前行，那么这个和`S`应该是一样的功能。
 	  `h S`: <br>
 	  ["x]S: Delete [count] lines [into register x] and startinsert.  Synonym 
 	  for "cc" |linewise|.
 
+	> `gUgU`，可以使本行变为大写，但是它比较特殊，有`gUU`这个简写形式。同样地，
+	  `gugu`也有`guu`这个简写形式。
+
+
+13. vim自带的operator是比较少的，我们可以定制我们自己的。比如`vim-commentary`这个
+    插件，想要对代码进行注释，就可以使用`gc{motion}`，和`gu/gU`类似，`gc`中的`g`
+	也是前缀，如果想要注释一整行，使用`gcgc`，同样地，`gcc`是其简写形式。
+
+14. gg可以让光标移动到首行，G使其移动到文尾。这两个操作也是motion，你可以`dG`删除
+    到文末。
 
 
