--- a/programming-language/Rust/rust-in-action/Ch10.md
+++ b/programming-language/Rust/rust-in-action/Ch10.md
@@ -70,7 +70,7 @@
 10. std中的channel是mpsc，multiple producer single receiver
     第三方的crate中的`crossbeam`提供了mpmc receiver也可以是多个的了。
 
-11. 
+11. 测试代码
    
    ```rust
    use crossbeam::channel::unbounded;                                                                                                                                                              
@@ -101,4 +101,33 @@
    是一个队列，再加上for循环创建线程是有序的，每个线程又join掉，所以最后的打印是
    有序的。
 
+12. channel中的recv()函数是block的，如果channel中没有数据的话。
+    ```rust
+	pub fn recv(&self) -> Result<T, RecvError>
+	```
+	This function will always block the current thread if there is no data ava-
+	ilable and it’s possible for more data to be sent. Once a message is sent to
+	the corresponding Sender (or SyncSender), then this receiver will wake up and
+	return that message.
 
+13. rust in action中的这个线程池，里面的每个线程都会收到一个`Finished`的信号，因为
+    每个线程拿到一个`Finished`的信号，就退出了，不会拿走两个信号，再加上我们的信号
+	数和线程数是1:1的，所以最后肯定是每一个线程都拿到一个`Finished`信号，然后退出。
+
+    ```rust
+	for _ in 0..n_threads {
+	      let todo = todo_rx.clone();     
+	      let results = results_tx.clone();
+	      thread::spawn(move || {
+				loop {
+		             let task = todo.recv();
+		 		     let result: (usize, Operation) = match task {
+					      Err(_) => break,              
+					      Ok(Work::Finished) => break, 
+					      Ok(Work::Task((i, byte))) => (i, parse_byte(byte)),
+			    	 };
+					 results.send(result).unwrap();
+				}
+		  });
+	}
+	```
