--- a/programming-language/Rust/rust-in-action/Ch10.md
+++ b/programming-language/Rust/rust-in-action/Ch10.md
@@ -131,3 +131,21 @@
 		  });
 	}
 	```
+
+14. green thread
+
+	In computer programming, green threads or virtual threads are threads that are 
+	scheduled by a runtime library or virtual machine (VM) instead of natively by 
+	the underlying operating system (OS). Green threads emulate multithreaded envi-
+	ronments without relying on any native OS abilities, and they are managed in 
+	user space instead of kernel space, enabling them to work in environments that 
+	do not have native thread support.[1]
+	
+	在计算机编程中，绿色线程或者叫虚拟线程是由运行时库或虚拟机进行调度的线程，并不是
+	原生由地其下的操作系统进行调度管理。绿色线程的多线程是靠运行环境模拟的，并不依赖
+	任何操作系统，所以他们位于用户态而不是内核态，正因此，他们可以在没有OS原生线程支
+	持的情况下工作。
+
+	rust从0.10版本开始去掉了绿色线程，为了使其runtime足够的小。
+
+15.  
