--- a/programming-language/Rust/rust-in-action/Ch10.md
+++ b/programming-language/Rust/rust-in-action/Ch10.md
@@ -148,4 +148,24 @@
 
 	rust从0.10版本开始去掉了绿色线程，为了使其runtime足够的小。
 
-15.  
+15. 函数和闭包原来真的是可以用trait来统一的
+
+    ```rust
+	use std::ops::Fn
+
+	fn foo<T: Fn()>(_: T) {}
+
+	fn hello() {
+    	println!("hello world");
+	}
+
+	fn main(){
+    	foo(hello);
+	    foo(||{});
+	}
+	```
+
+	Fn is implemented automatically by closures which only take immutable references to
+	captured variables or don’t capture anything at all, as well as (safe) function poi-
+	nters (with some caveats, see their documentation for more details). Additionally, 
+	for any type F that implements Fn, &F implements Fn, too.
