--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -115,4 +115,17 @@
 14. gg可以让光标移动到首行，G使其移动到文尾。这两个操作也是motion，你可以`dG`删除
     到文末。
 
+15. 如果想选中全文，需要`ggG`，也就是先将光标移动到首行，然后再利用G到最后一行。
+    而如果安装了`vim-textobj-entire`这个插件，`ae`这个motion就代表全文。
 
+16. 我们可以把`vim-commentary`和`vim-textobj-entire`一起使用。前者提供`gc`这个
+    operator，后者提供`ae`这个motion，组合在一起就是对全文进行注释。
+
+17. vim的mode，normal mode/insert mode/visual mode是很常见并且易于理解的。但vim还
+    有一个mode，operator-pending mode.
+
+	比如当你想要使用`dw`来删除一个单词，当你摁下`d`而没有摁下`w`时，你就处于这个mode
+    也就是说当vim被给了operator却没有给motion，这时就处于operator-pending mode.
+
+	如果将vim的各种状态必做有限状态机的话，这个mode的通往下一个mode的弧线上写的一定
+	是motion。
