--- a/utility/vim/practical-vim/2.md
+++ b/utility/vim/practical-vim/2.md
@@ -129,3 +129,6 @@
 
 	如果将vim的各种状态必做有限状态机的话，这个mode的通往下一个mode的弧线上写的一定
 	是motion。
+
+    > vim中有的命令是需要前缀的，当嗯下前缀后进入的状态并不是operator-pending mode.
+	  可以把这种前缀视作一种命名空间。
