--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -28,4 +28,12 @@
    的东西都不想要的，要重写，你可以进入insert normal mode然后使用`D`来对其进行删除。
    但这个应用场景使用`D`或者`C`貌似都一样。
 
+   practical vim的作者给了这样的使用场景，当你正在编辑的那一样在你的屏幕上是最后一
+   行时，你或许想要往下翻一下，这时在insert mode时可以使用`<C-o>zz`来滚动屏幕。
+
+4. 滚动屏幕但并不移动光标
+
+   * `zz`: 将光标所在的行移动到屏幕的正中间
+   * `zt`: 将光标所在的行移动到屏幕的最顶上
+   * `zb`: 将光标所在的行移动到屏幕的最底下
 
