--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -36,7 +36,7 @@
    * `zz`: 将光标所在的行移动到屏幕的正中间
    * `zt`: 将光标所在的行移动到屏幕的最顶上
    * `zb`: 将光标所在的行移动到屏幕的最底下
-5. 在caps lock开启的情况下，使用`j``k`的功能已经完全不同，因为他们已经变成: 
+5. 在caps lock开启的情况下，使用`j/k`的功能已经完全不同，因为他们已经变成: 
    * J: join操作，join count行，在没有`count`修饰时，count默认是2， 也就是join2行
      ，连接此行和下一行，将下一行移动到此行的末尾。想要多join的话，就需要给count
 	 参数了
