--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -45,3 +45,36 @@
 	   回到上一行。
 
    * K: 在man page中查找光标下的词
+
+6. 在vim中如何退出visual mode: 使用`Esc`两下会退出visual mode，但是使用`v`也可以。
+   
+   > 可能`Esc`嗯2下是官方的退出方法？
+
+7. `t<char>` 
+   Till before [count]'th occurrence of {char} to the right.  The cursor is placed
+   on the character left of {char} |inclusive|.  {char} can be entered like with 
+   the |f| command.
+
+   直到第count次出现char的前面，和`f`有点类似，都可以使用`;/,`来继续找或者往回找。
+   它在vim的语法中应该是充当motion，但是和`f`一样的是，可以单独使用移动光标。
+
+   `dtn`: delete直到第一次出现的`n`的前面。
+
+8. 在insert mode中进行拷贝(put)
+   ```text
+   Practical Vim, by Drew Neil
+   Read Drew Neil's
+   ```
+   比如我们想把65行的`Practical Vim`粘贴到66行的s后面。可以这样做:
+   光标落在65行`P`上，使用`yt,`进行拷贝，然后使用`jA`来移动到s的后面，输入` `，然后
+   `C-r0`在insert mode中将寄存器0的内存粘贴到这里。
+
+   语法就是`<C-r>{register}`
+
+9. 第8点说到的在insert mode进行拷贝对于小文本来说是比较合适的，但对于内容较多的拷
+   贝，就会发现稍有延迟，这是因为vim对于被拷贝的内容也看作是手动输入的一样。如果
+   `textwidth`和`autoindent`被打开后，粘贴下来的内容的格式可能也不是你想要的，而
+   `<C-r><C-p>{register}`会原封不动的拷贝下来。
+
+   对于大量文本的粘贴，还是进入normal mode，使用粘贴的命令进行操作。
+
