--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -78,3 +78,28 @@
 
    对于大量文本的粘贴，还是进入normal mode，使用粘贴的命令进行操作。
 
+10. here's a breakdown of the 10 Vim Register Types.
+
+    * The unnamed register `""`
+    * 10 numbered registers `"0 to "9`
+    * The small delete register `"-`
+    * 26 named registers `"a to "z or "A to "Z`
+    * Three read-only registers `":, "., "%`
+    * Alternate buffer register `"#`
+    * The expression register `"=`
+    * The selection registers `"* and "+`
+    * The black hole register `"_`
+    * Last search pattern register `"/`
+
+11. 利用expression register进行计算
+    这个寄存器可以运行vim脚本，并且返回脚本的运行结果，我们可以利用这个特性来让
+	vim帮我们完成一些数学计算，然后通过粘贴，来将这个东西插入到我们的文本中。
+    
+	使用方法，在insert mode，使用`<C-r>=`来开启，嗯完这个指令后会在下面出现提示
+	，让我们输入表达式，当表达式输入完成后，摁下回车`<CR>`，计算结果就被插入到现
+	在的方标处了，并且你还是处于insert mode。
+
+	> 貌似这个计算并没有那么严格，比如使用`1/0`=92233720368547758，哈哈哈，不清楚
+	  内部是怎么实现的。
+
+
