--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -102,4 +102,9 @@
 	> 貌似这个计算并没有那么严格，比如使用`1/0`=92233720368547758，哈哈哈，不清楚
 	  内部是怎么实现的。
 
-
+12. vim的行号分为绝对行号和相对行号
+	```
+	set nu    " enable absolute line number
+	set rnu   " enable relative line number
+	" when they are both set, they converge into hybrid line number
+	```
