--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -108,3 +108,9 @@
 	set rnu   " enable relative line number
 	" when they are both set, they converge into hybrid line number
 	```
+
+13. 使用vim的small delete register
+    这个寄存器会保存你使用`x`来删除的单个char。所以在insert mode可以使用`{C-r}-`
+    来粘贴单个被删除的char。
+
+
