--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -113,4 +113,21 @@
     这个寄存器会保存你使用`x`来删除的单个char。所以在insert mode可以使用`{C-r}-`
     来粘贴单个被删除的char。
 
+14. vim可以插入任何的字符通过插入numeric code，这在某些情况下很方便，因为有的字符
+    是在键盘上找不到的。 numeric code指的是其编码，当知道了编码后，我们可以使用
+    `{C-v}code<Enter>`在insert mode来插入字符。
 
+    我们`65`在ascii中代表`A`，那么我们就可以得到A
+
+    > 更复杂的unicode编码也是可以插入的，但我感觉这个我用不到，跳过。
+
+15. `R`用于replace，可以从normal mode 进入 replace mode
+
+16. vim中的`Tab`的大小使用`tabstop`变量来控制，使用`h tabstop`发现它不建议修改这个
+    变量的值，因为如果修改了，那么你的文档在很多地方都会格式错误。但它推荐了一个使
+    方法可以让你修改变量但不会格式出错，也正是我在用的。
+
+    >  Set 'tabstop' and 'shiftwidth' to whatever you prefer and use
+    'expandtab'.  This way you will always insert spaces.  The
+    formatting will never be messed up when 'tabstop' is changed.
+ 
