finish practical vim ch3

--- a/utility/vim/practical-vim/3.md
+++ b/utility/vim/practical-vim/3.md
@@ -130,4 +130,20 @@
     >  Set 'tabstop' and 'shiftwidth' to whatever you prefer and use
     'expandtab'.  This way you will always insert spaces.  The
     formatting will never be messed up when 'tabstop' is changed.
- 
+
+17. 原来`vim`中`r`于`R`是对应的功能键，一个用于批量替换，一个替换单个字符。
+
+18. 如16中所述，如果并没有设置`expandtab`这个变量的话，那么`Tab`就是一个字符，只是
+    被解释成了`tabstop`变量长度的空白。这个特性在使用`Replace mode`时会引发错误，比
+    如你在tab的位置进入了`replace mode`，由于`Tab`只是一个字符，那么你替换时，输入一
+    个字符就可以把`Tab`的一个字符替换掉，从视觉上就是`tabstop`个字符被1个字符替换了。
+
+    > 当然设置上`expandtab`，将`Tab`都变为`Space`可以解决这个问题。
+
+    这时vim的另一个mode出马了，`visual replace mdoe`，如其名，在替换时不是按照文件内
+    容来进行替换了，而是按照视觉上的内容来进行替换。这个mode中，输入`tabstop`个内容才
+    可以替换掉一个`Tab`键。此模式使用`gR`来进入。
+
+    `r`也有相应的`visual`版本，使用`gr`来进入。
+
+
