--- a/utility/vim/practical-vim/4.md
+++ b/utility/vim/practical-vim/4.md
@@ -3,6 +3,6 @@
    中不同，比如在normal mode中，是`operator + motion`来使用，而在
    visual mode里，则是先选中(高亮)，再使用`operator`来操作所选文字。
 
-   > 举个例子，删除一个段落:
+   举个例子，删除一个段落:
    * normal mode: d ap
    * visual mode: vap d 
