--- a/utility/vim/practical-vim/4.md
+++ b/utility/vim/practical-vim/4.md
@@ -6,3 +6,20 @@
    举个例子，删除一个段落:
    * normal mode: d ap
    * visual mode: vap d 
+
+2. `iw`这是一个motion: inner word (:h iw)
+
+   iw:<br>
+   "inner word", select [count] words (see |word|).
+   White space between words is *counted* too.
+   When used in Visual linewise mode "iw" switches to
+   Visual characterwise mode.
+
+   aw:<br>
+   "a WORD", select [count] WORDs (see |WORD|).
+   *Leading or trailing white space is included*, but *not
+   counted*.
+   When used in Visual linewise mode "aW" switches to
+   Visual characterwise mode.
+
+   可以发现`iw`和`aw`的区别，`aw`是包含空白的。
