--- a/utility/vim/practical-vim/4.md
+++ b/utility/vim/practical-vim/4.md
@@ -23,3 +23,15 @@
    Visual characterwise mode.
 
    可以发现`iw`和`aw`的区别，`aw`是包含空白的。
+
+3. vim还有一个`select mode`，类似于Microsoft windows的selection mode。
+   和vim的visual mode不同的是，在selection mode中选中后再输入一些
+   printable的字符，被选中的字符就被替换了。
+
+4. visual mode的3个submode:
+   按照选择的精度分为：
+   1. character-wise visual mode: 使用`v`进入，精度最细的visual mode
+   ，可以选择很多，下面的模式显示`VISUAL`
+   2. line-wise visual mode: 使用`V`进入，在这个模式里上下`kj`都是选
+   则一整行，下面的模式显示`VISUAL LINE`
+   3. block-wise visual mode: 使用`C-v`进入，下面的模式显示`VISUAL BLOCK`
