--- a/os/nju-os-2021-jyy/p2.md
+++ b/os/nju-os-2021-jyy/p2.md
@@ -2,8 +2,31 @@
 
    > 在上节课说过程序是一种状态机，状态指的是`M(内存)+R(寄存器)`
 
-   而状态机是状态的转换，初始状态就是操作系统在初始化进程时进程得到的状态，转换会在`PC`指针+1取指执行时发生，这就是状态机的边
+   而状态机是状态的转换，初始状态就是操作系统在初始化进程时进程得到的状态，转换  
+   会在`PC`指针+1取指执行时发生，这就是状态机的边
 
    ```
    (M0, R0) - fetch and exec the instrument - > (M1, R1) ...
    ```
+
+2. 两个有意思的缩写:
+   1. STFW: search the fucking web
+   2. RTFM: read the fucking manual   
+
+3. 要拿到某一个进程的虚拟内存的信息，使用`sudo cat /proc/PID/maps`来查看
+
+   ```shell
+   $ sudo cat /proc/PID/maps
+   00400000-00401000 r--p 00000000 08:02 1180870                            /home/steve/Desktop/a.out
+   00401000-00402000 r-xp 00001000 08:02 1180870                            /home/steve/Desktop/a.out
+   00402000-00403000 r--p 00002000 08:02 1180870                            /home/steve/Desktop/a.out
+   7ffff7ff9000-7ffff7ffd000 r--p 00000000 00:00 0                          [vvar]
+   7ffff7ffd000-7ffff7fff000 r-xp 00000000 00:00 0                          [vdso]
+   7ffffffdd000-7ffffffff000 rw-p 00000000 00:00 0                          [stack]
+   ffffffffff600000-ffffffffff601000 --xp 00000000 00:00 0                  [vsyscall]
+   ```
+
+4. 在`gdb`中，可以使用`layout asm`来查看汇编代码，然后在其shell中执行`si`执行单
+   条指令。
+
+5. 程序中的指令，只有2种，一种是我们自己的计算指令，另一种则是syscall
