--- a/os/nju-os-2021-jyy/p2.md
+++ b/os/nju-os-2021-jyy/p2.md
@@ -30,3 +30,49 @@
    条指令。
 
 5. 程序中的指令，只有2种，一种是我们自己的计算指令，另一种则是syscall
+
+6. c语言本身是没有类型的，所有的类型都是对一段内存的解读。
+
+7. gdb中使用`info registers`可以查看寄存器的值。
+
+8. amd64的`retq`指令，从栈中pop出一个地址，存放到`rip`寄存器中。
+
+9. `info registers`可以查看所有寄存器的值，`info registers specific_regi_name`可  
+   以查看具体的寄存器的值，比如`info registers rip`查看pc指针。
+
+10. 现有如下代码，查看下它为什么编译连接会得到segfault
+    ```c
+    // main.c
+    int _start() {
+        return 0;
+    } 
+    ```
+
+    ```shell
+    gcc -c main.c && ld main.o
+    ./a.out
+    ```
+   
+    使用`gdb a.out`进行调试，然后使用`layout asm`查看汇编代码，使用`starti`进行  
+    执行第一条指令，然后可以看到完整的汇编代码
+
+    ```assemble
+    0x401000 <_start>       endbr64  
+    0x401004 <_start+4>     push   %rbp
+    0x401005 <_start+5>     mov    %rsp,%rbp 
+    0x401008 <_start+8>     mov    $0x0,%eax 
+    0x40100d <_start+13>    pop    %rbp
+    
+    ; 执行到这条指令
+    0x40100e <_start+14>    retq
+    ```
+    
+    `retq`指令是函数返回的指令，将会把`memory[rsp]`中的内容赋给`rip`，我们执行到  
+    这条指令前，然后查看`rip`寄存器的值。
+    
+    ```shell
+    (gdb) info registers rip
+    rip            0x1                 0x1
+    ```
+    会发现`rip`的值是`0x1`，再使用`info inferiors`查看当前进程的PID，再使用  
+    `!cat /proc/PID/maps`查看各内存的映射。
