--- a/os/nju-os-2021-jyy/p2.md
+++ b/os/nju-os-2021-jyy/p2.md
@@ -68,11 +68,11 @@
     ```
     
     `retq`指令是函数返回的指令，将会把`memory[rsp]`中的内容赋给`rip`，我们执行到  
-    这条指令前，然后查看`rip`寄存器的值。
+    这条指令前，查看内存中`rsp`位置的值，`x/x $rsp`发现是`0x1`，然后执行这条指令  
+    发现`rip`寄存器果然变成了`0x1`.
     
     ```shell
     (gdb) info registers rip
     rip            0x1                 0x1
     ```
-    会发现`rip`的值是`0x1`，再使用`info inferiors`查看当前进程的PID，再使用  
-    `!cat /proc/PID/maps`查看各内存的映射。
+    会发现`rip`的值是`0x1`，而这个地址是不可以读的，所以我们出现了segfault。
