--- a/os/nju-os-2021-jyy/p2.md
+++ b/os/nju-os-2021-jyy/p2.md
@@ -29,7 +29,12 @@
 4. 在`gdb`中，可以使用`layout asm`来查看汇编代码，然后在其shell中执行`si`执行单
    条指令。
 
-5. 程序中的指令，只有2种，一种是我们自己的计算指令，另一种则是syscall
+5. 程序中的指令，只有2种，一种是我们自己的计算指令，另一种则是syscall。可以这样  
+   理解，计算指令是为了syscall指令服务的，是在为syscall准备系统调用的寄存器现场  
+   计算指令只能单纯地进行计算，如果它想要做任何的事的话，都需要调用syscall
+  
+   > 当程序调用syscall时，它全权交给了操作系统，只知道syscall的返回值，去判断成  
+   功或者失败。syscall发生了什么事情，程序完全不清除。
 
 6. c语言本身是没有类型的，所有的类型都是对一段内存的解读。
 
@@ -75,4 +80,32 @@
     (gdb) info registers rip
     rip            0x1                 0x1
     ```
-    会发现`rip`的值是`0x1`，而这个地址是不可以读的，所以我们出现了segfault。
+    会发现`rip`的值是`0x1`，而这个地址是不可以读的，所以我们出现了segfault.  
+    所以我们的`_start`函数是不应该返回的。那么怎么让我们的程序停下来，使用操作  
+    系统给我们提供的`syscall`，
+
+11. 在gdb中使用`!cat /proc/PID/maps`查看内存映射好像格式会乱，因为这条命令不会显示  
+    可以使用`shell cat /proc/PID/maps | less`来搞一下
+
+12. 使用`shell cat /proc/PID/maps`来查看内存映射，发现第一个可以读的内存是:  
+
+    ```shell
+    00400000-00401000 r--p 00000000 08:02 1835031                            /home/steve/Documents/workspace/c_playground/pg/a.out
+    00401000-00402000 r-xp 00001000 08:02 1835031                            /home/steve/Documents/workspace/c_playground/pg/a.out
+    00402000-00403000 r--p 00002000 08:02 1835031                            /home/steve/Documents/workspace/c_playground/pg/a.out
+    7ffff7ff9000-7ffff7ffd000 r--p 00000000 00:00 0                          [vvar]
+    7ffff7ffd000-7ffff7fff000 r-xp 00000000 00:00 0                          [vdso]
+    7ffffffdd000-7ffffffff000 rw-p 00000000 00:00 0                          [stack]
+    ffffffffff600000-ffffffffff601000 --xp 00000000 00:00 0                  [vsyscall]
+    ``` 
+    
+    `0x400000`(注意这是16进制数)，我们可以查看下这个内存的内容，`x/x 0x400000`:  
+
+    ```shell
+    (gdb) x/x 0x400000
+    0x400000:       0x464c457f
+    ```  
+    
+    机器是小端机，所以这个值应该读作`7f 45 4c 46`。  
+    0x7F followed by ELF(45 4c 46) in ASCII; these four bytes constitute the magic number.   
+    这正是`elf header`的前4个字节。
