--- a/os/nju-os-2021-lab/m1.md
+++ b/os/nju-os-2021-lab/m1.md
@@ -26,7 +26,7 @@
    `optstring`这个字符串如何给呢？第一个字符是`':'`，然后当你的选项需要值，在其  
    后也加一个`':'`。
 
-   当函数返回`?`时，`optopt`这个int就是那个错误的非法的选项。
+   当函数返回`?`及`:`时，`optopt`这个int就是那个错误的非法的选项。
    
 
    ```c
@@ -58,3 +58,60 @@
        return 0;
    }
    ```
+
+   发现如果几个选项不需要值，那么这几个选项可以同时放一起给出来，`getopt`函数支  
+   持这一点，所以上面的代码，每次都去使用`av[optind-1]`来打印出选项是不好的。
+  
+   如果正确解析出了选项，使用函数返回值就可以拿到这个option。如果发生了错误，非  
+   法选项或者缺少额外参数的选项，这个错误选项都可以使用`optopt`拿到。
+
+3. `getpid`可以拿到进程的id，`getppid`可以拿到进程的父进程的id.
+
+
+4. `getopt_long`和`getopt_long_only`可以拿到long option，两者的区别在于后者可以  
+   用`-`来给长选项
+    
+   > getopt_long_only() is like getopt_long(), but '-' as well as "--" can 
+     indicate a long option.  If an option that  starts  with  '-' (not "--")
+     doesn't match a long option, but does match a short option, it is parsed 
+     as a short option instead.
+
+    ```c
+    #include <stdio.h>
+    #include <getopt.h>
+
+    int main(int ac, char *av[]) {
+        int option = -1;
+
+        char * short_opt = "ho:v";
+        struct option long_opt[4] = {
+            {"help", 0, NULL, 'h'},
+            {"output", 1, NULL, 'o'},
+            {"version", 0, NULL, 'v'},
+            {NULL, 0, NULL, 0},
+        };
+
+        while ((option=getopt_long(ac, av, "ho:v", &long_opt[0], NULL)) != -1) {
+            switch (option){
+                case 'h':
+                    printf("help\n");
+                    break;
+                case 'o':
+                    printf("output %s\n", optarg);
+                    break;
+                case 'v':
+                    printf("version\n");
+                    break;
+                case ':':
+                    printf("%c needs an additional argument\n", optopt);
+                    break;
+                case '?':
+                    printf("%c invalid option\n", optopt);
+                    break;
+            }
+                
+            
+        }
+        return 0;
+    }
+    ```
