--- a/os/nju-os-2021-lab/m1.md
+++ b/os/nju-os-2021-lab/m1.md
@@ -115,3 +115,12 @@
         return 0;
     }
     ```
+
+5. `char *strtok(char *str, const char *delim)`函数可以用来拆分字符串
+
+    有几点需要注意:  
+    1. `str`参数是会被修改的，其中是delimiter的地方会被换为`\0`.
+    2. `delim`参数是个字符串，而不是char的指针，所以一定是nul-terimated.
+    3. 多次对str进行`split`时，第2次及以后的调用，`str`参数应该给`NULL`
+
+
