--- a/os/nju-os-2021-lab/m1.md
+++ b/os/nju-os-2021-lab/m1.md
@@ -124,3 +124,5 @@
     3. 多次对str进行`split`时，第2次及以后的调用，`str`参数应该给`NULL`
 
 
+6. 在解析`/proc/[pid]/stat`时注意，第二个字段`comm`中也会包含whitespace，在解析  
+   时不要用空白去split它
