--- a/system/os/nju-ics-theory/part1/p11.md
+++ b/system/os/nju-ics-theory/part1/p11.md
@@ -5,7 +5,24 @@
    所以浮点要IEEE754
 
 3. IEEE754所做的，就是约定好格式，将浮点数用定点数来表示
-   用一个定点数原码表示有效数字(mantissa)，一个定点数移码表示小数点的位置(biased exp)
+   用一个定点数无符号位(符号位单独用第一个bit表示)原码表示有效数字(mantissa)，
+   一个定点数移码表示小数点的位置(biased exp)
 
 4. 浮点数的biased exp为什么用移码表示？
+
    将负数指数也变为正的，在比较的时候方便。两个浮点数加减的时候小阶向大阶看齐
+
+   exp必须可正可负来表示大数和小数，但是负数如果用补码则会使比较困难，所以使用
+   了无符号的移码。
+   
+   The purpose of this is to enable high speed comparisons between floating-point 
+   numbers using fixed-point hardware. 
+
+5. exp的范围: 
+   * For a single-precision number, the exponent is stored in the range 1 .. 254 
+   (0 and 255 have special meanings), and is interpreted by subtracting the bias 
+   for an 8-bit exponent (127) to get an exponent value in the range −126 .. +127.
+
+   * For a double-precision number, the exponent is stored in the range 1 .. 2046 
+   (0 and 2047 have special meanings), and is interpreted by subtracting the bias 
+   for an 11-bit exponent (1023) to get an exponent value in the range −1022 .. +1023.
