--- a/system/os/nju-ics-theory/part1/p11.md
+++ b/system/os/nju-ics-theory/part1/p11.md
@@ -10,7 +10,7 @@
 
 4. 浮点数的biased exp为什么用移码表示？
 
-   将负数指数也变为正的，在比较的时候方便。两个浮点数加减的时候小阶向大阶看齐
+   将负数指数也变为正的，在比较的时候进行对阶操作方便,两个浮点数加减的时候小阶向大阶看齐
 
    exp必须可正可负来表示大数和小数，但是负数如果用补码则会使比较困难，所以使用
    了无符号的移码。
