--- a/system/os/nju-ics-theory/part1/p15.md
+++ b/system/os/nju-ics-theory/part1/p15.md
@@ -1,3 +1,5 @@
 1. 由于计算机中数据的存储有大端序和小端序之分，所以使用leftmost和rightmost来描
    述最高位或者最低位是不准确的，应该使用most significant bit(MSB)来表示最高有
    效位，使用least significant bit(LSB)来表示最低有效位
+
+2. gcc9.4.0使用的默认c标准是c17
