--- a/system/os/nju-ics-theory/part1/p17.md
+++ b/system/os/nju-ics-theory/part1/p17.md
@@ -1,2 +1,7 @@
 1. 科学记数法(scientific nitation)就是一种将浮点数用定点数表示的例子。IEEE754所
    用的，是二进制版且exp带bias的科学记数法
+
+2. f32类型，和int一样，最多可以编码2^32个数字，但是浮点数所表示的范围更大。所以
+   其更加的稀疏。
+
+3. 早期的计算机，各自有各自的浮点数编码
