--- a/system/os/nju-ics-theory/part1/p25.md
+++ b/system/os/nju-ics-theory/part1/p25.md
@@ -15,13 +15,31 @@
        int z2 = x-y;
    }
    ```
+
    我们直到在计算机内，有符号定点数是用补码表示的，所以想实现这个程序就必须有n
    位带标志加法器来实现加法运算。这样来看z1是比较好做的，直接用x和y的补码放到加
    法器中就可以了。z2这种需要减法的，由1我们推的补码减法公式，用加法来做减法，
    以及[-y]补=[y]补取反+1，可以将最终的加法器的两个运算数变为这样的输入: 
+
    1. 一端直接输入x的补码
    2. 另一端接一个双路选择器，从y以及y的取反中2取1
    当做加法时，y那端的双路选择器选择y。而做减法时，y那端的双路选择器选择y的反，
    并且最初的进位位设为1，因为取反之后要再+1。这样就实现了有符号数的加法与减法。
    
    ![ppt](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-03-14%2010-02-45.png)
+
+
+   看上图所示的东西，我们的sub信号控制做加法或者减法，当sub信号为1，y端供应其反，
+   cin和sub相同，也为1，刚好做减法。 
+   
+   图中这个器件就是整数加减运算部件，在其基础上，再加上寄存器，控制器以及逻辑
+   运算就可以实现乘除法。
+
+3. 算术逻辑单元ALU
+   其核心部件就是带标志的加法器，可以实现有符号/无符号数的加法与减法这些基本的
+   算术运算，以及与/或/非/异或等逻辑运算。  
+   
+   ![alu](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-03-14%2010-19-28.png)
+
+   如图，可以发现alu有一个操作控制端，其中有3位，可以对不同的操作进行不同的
+   编码，如最下的表所示
