--- a/system/os/nju-ics-theory/part1/p28.md
+++ b/system/os/nju-ics-theory/part1/p28.md
@@ -34,4 +34,9 @@
    这个比较简单，只有当sum为0时，ZF为1，否则为0.
 
 8. CF进/借位标记  
-   CF = Cout XOR Sub
+   `CF = Cout XOR Sub`  
+   当做加法操作的时候，就直接看进位位Cout就好了。当进行减法操作的时候，Sub=1，
+   则`CF=~Count`
+
+9. SF符号标记  
+   只需要将sum的第一位给它就好 
