--- a/system/os/nju-ics-theory/part1/p28加减运算生成的标志信息.md
+++ b/system/os/nju-ics-theory/part1/p28加减运算生成的标志信息.md
@@ -1,3 +1,5 @@
+> 讲整数的加减法。
+
 1. 计算机中所有的运算都是基于加法实现的，也就是靠我们的n位整数加减运算部件
    来完成的。
 
@@ -67,6 +69,12 @@
     发现进位位为0，符号位(如果有的话)为1。如果两个数都是无符号数，因为进位为0，则没有溢出。
     如果两个数是有符号数，则两个数为正数，结果为负数，发生了溢出。
 
+11. 减法溢出的判断:  
+    1. 无符号数看其是否结果为负数，因为无符号数没办法表示负数，所以有
+    负数，则溢出。结果是否为负则看其是否有借位，被减数小于减数不够减，
+    结果为负，才需要借位。
+    2. 有符号数同加法，看OF标志。(因为补码减法是靠加法实现的)
+
 11. 计算机如何比较俩个数的大小，进行减法操作:  
-    * 如果两个数是无符号数，则若CF=0，被减数大于减数。
+    * 如果两个数是无符号数，则若CF=0，ZF!=0被减数大于减数。(CF=0，说明没有借位，被减数大于等于减数，再加上结果不为0，则得出结论，被减数大于减数)
     * 如果两个数是有符号数，若OF=SF，被减数大于减数。
